- Updated libopenmpt to version 0.4.0 with bug fixes and extensivefeature changes. - Implemented support for configurable fade time in addition to repeat count. - Version is now 0.4.0

--- a/mod.rc
+++ b/mod.rc
@@ -63,9 +63,9 @@ BEGIN
     COMBOBOX        IDC_INTERPOLATION,66,42,55,58,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
     RTEXT           "Loops:",IDC_STATIC,35,59,29,9
     COMBOBOX        IDC_LOOPS,66,57,55,84,CBS_DROPDOWNLIST | WS_VSCROLL | WS_TABSTOP
-    RTEXT           "Min. length:",IDC_STATIC,20,75,44,8
-    COMBOBOX        IDC_LENGTH,66,73,55,130,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
-    LTEXT           "seconds",IDC_STATIC,124,75,45,8
+    RTEXT           "Fade time:",IDC_STATIC,20,75,44,8
+    COMBOBOX        IDC_FADE,66,73,55,130,CBS_DROPDOWN | WS_VSCROLL | WS_TABSTOP
+    LTEXT           "ms",IDC_STATIC,124,75,45,8
     RTEXT           "Gain:",IDC_STATIC,143,14,26,8
     CONTROL         "",IDC_GAIN,"msctls_trackbar32",TBS_BOTH | TBS_NOTICKS | WS_TABSTOP,169,12,72,13
     RTEXT           "0.00 dB",IDC_GAIN_TEXT,242,14,37,8
